# kbld

./: .gitignore  .golangci.yml  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-enhancement-request.md
.github/workflows/: golangci-lint.yml  release-published.yml  release.yml  test-gh.yml  trivy-scan.yml
cmd/kbld/: kbld.go
cmd/kbld-lambda-website/: main.go
docs/: README.md  auth.md  building.md  cnab-image-relocation.md  config.md  dev.md  packaging.md  resolving.md
examples/gcp-microservices-demo/: README.md  build-local.yml  prebuilt.yml
examples/nginx/: config.yml
examples/simple-app/: build.yml
examples/simple-app-build-and-push/: build.yml
examples/simple-app-build-and-push-docker-buildx/: build.yml
examples/simple-app-build-local/: build.yml
examples/simple-app-build-local-bazel/: build.yml
examples/simple-app-build-local-kubectl-buildkit/: build.yml
examples/simple-app-build-local-pack/: build.yml
hack/: Dockerfile.dev  build-binaries.sh  build-values-get-kbld-io.yml  build.sh  errcheck_excludes.txt  lint.sh  linter.sh  test-all-locally.sh  test-all-minikube-local-registry.sh  test-all-on-github.sh  test-all.sh  test-e2e.sh  test.sh
my-test/: osspi_binary_detect_result.json
test/e2e/: README.md  build_bazel_test.go  (+14 more)
test/e2e/assets/simple-app/: BUILD.bazel  Dockerfile  WORKSPACE  app.go  go.mod
test/e2e/assets/simple-app/dev/: Dockerfile.dev
tools/: tools.go
(+122 files in other folders)
